# grumpy

./: .gitignore  .gitmodules  .travis.yml  README  configure  index.html  params.json
doc/: example.js
doc/examples/: README  devtools.js  history_store.js  optools.js
linux/syslog/: grumpy.conf
linux/systemd/system/: grumpyd.service
macos/: Info.plist  mkicon.sh  release.sh
release/: CMakeCache.txt
snap/: snapcraft.yaml
snap/gui/: grumpy.desktop
src/: CMakeLists.txt
src/GrumpyIRC/: CMakeLists.txt  GrumpyIRC.pro  README  aboutwin.cpp  aboutwin.h  aboutwin.ui  channelwin.cpp  channelwin.h  channelwin.ui  colorbox.cpp  colorbox.h  connectwin.cpp  connectwin.h  connectwin.ui  corewrapper.cpp  corewrapper.h  defaultconfig.h  favoriteswin.cpp  favoriteswin.h  favoriteswin.ui  grumpyconf.cpp  grumpyconf.h  grumpydcfwin.cpp  grumpydcfwin.h  grumpydcfwin.ui  grumpydusercfgwin.cpp  grumpydusercfgwin.h  grumpydusercfgwin.ui  grumpyeventhandler.cpp  grumpyeventhandler.h  highlighter.cpp  highlighter.h  hooks.cpp  hooks.h  icons.qrc  initializewin.cpp  initializewin.h  initializewin.ui  inputbox.cpp  inputbox.h  (+56 more)
src/GrumpyIRC/lib/: CMakeLists.txt  aboutwin.cpp  aboutwin.h  aboutwin.ui  channelwin.cpp  channelwin.h  channelwin.ui  colorbox.cpp  colorbox.h  colorbox.ui  connectwin.cpp  connectwin.h  connectwin.ui  corewrapper.cpp  corewrapper.h  embedded.qrc  favoriteswin.cpp  favoriteswin.h  favoriteswin.ui  grumpy_global.h  grumpyconf.cpp  grumpyconf.h  grumpydcfwin.cpp  grumpydcfwin.h  grumpydcfwin.ui  grumpydusercfgwin.cpp  grumpydusercfgwin.h  grumpyeventhandler.cpp  grumpyeventhandler.h  hooks.cpp  hooks.h  identityeditorwin.cpp  identityeditorwin.h  identityeditorwin.ui  inputbox.cpp  inputbox.h  jshighlighter.h  keyfilter.cpp  keyfilter.h  linkhandler.cpp  (+59 more)
src/GrumpyIRC/lib/script_engine/: grumpyuijs.cpp  grumpyuijs.h  jshighlighter.cpp  jshighlighter.h  scriptform.cpp  scriptform.h  scriptingmanager.cpp  scriptingmanager.h  scriptingmanager.ui  uiscript.cpp  uiscript.h
src/GrumpyIRC/lib/scripts/: _autoexec
src/GrumpyIRC/scripts/: _autoexec
src/grumpyd/: CMakeLists.txt  corewrapper.cpp  corewrapper.h  databasebackend.cpp  databasebackend.h  databasebin.cpp  databasebin.h  databasedummy.cpp  databasedummy.h  databaselite.cpp  databaselite.h  databasemigration.cpp  databasemigration.h  databaseqtpsql.cpp  databaseqtpsql.h  databaseqtsql.cpp  databaseqtsql.h  databaseqtsqlite.cpp  databaseqtsqlite.h  databasexml.cpp  databasexml.h  gdeventhandler.cpp  gdeventhandler.h  grumpyconf.cpp  grumpyconf.h  grumpyd.cpp  grumpyd.h  grumpyd.pro  grumpydapp.cpp  grumpydapp.h  install.sql  listener.cpp  listener.h  main.cpp  patch_sql_2.sql  resources.qrc  scrollbackfactory.cpp  scrollbackfactory.h  security.cpp  security.h  (+14 more)
src/grumpyd/obsolete/: databaselite.cpp  databaselite.h
src/grumpyd/psql/: install.sql  vacuum.sql
src/grumpyd/script_engine/: grumpydjs.cpp  grumpydjs.h  grumpydscript.cpp  grumpydscript.h  grumpydscrollbackjs.cpp  grumpydscrollbackjs.h
src/grumpyd/sqlite/: patch_sql_3.sql
src/libcore/: CMakeLists.txt  autocompletionengine.cpp  autocompletionengine.h  commandprocessor.cpp  commandprocessor.h  configuration.cpp  configuration.h  core.cpp  core.h  cppextension.cpp  cppextension.h  definitions.h  embedded_core.qrc  eventhandler.cpp  eventhandler.h  exception.cpp  exception.h  extension.cpp  extension.h  factory.cpp  factory.h  favorite.cpp  favorite.h  generic.cpp  generic.h  gp.cpp  gp.h  grep.cpp  grep.h  grumpydsession.cpp  grumpydsession.h  grumpyobject.cpp  grumpyobject.h  grumpyscript.cpp  grumpyscript.h  highlighter.cpp  highlighter.h  hooks.cpp  hooks.h  identity.cpp  (+35 more)
src/libcore/ecma/: grumpy.js  libirc.js
src/libcore/scripting/: genericjsclass.cpp  genericjsclass.h  grumpyjs.cpp  grumpyjs.h  grumpyjs_unsafe.cpp  grumpyjs_unsafe.h  marshallinghelper.cpp  marshallinghelper.h  networkjs.cpp  networkjs.h  scriptcommand.cpp  scriptcommand.h  scriptexception.cpp  scriptexception.h  scriptextension.cpp  scriptextension.h  scrollbackjs.cpp  scrollbackjs.h
src/libcore/scripting/ecma/: example.js  grumpy.js  libirc.js
src/libgp/: datablock.cpp  datablock.h  libgp.pro
src/libirc2htmlcode/: CMakeLists.txt  formatteditem.cpp  formatteditem.h  libirc2htmlcode.pro  libirc2htmlcode_global.h  parser.cpp  parser.h
src/tests/: CMakeLists.txt
src/tests/grumpyd/: CMakeLists.txt  grumpyd.pro  install.sql  resources.qrc  tst_grumpydtest.cpp
src/tests/libcore/: CMakeLists.txt  libcore.pro  tst_libcoretest.cpp
src/tests/libircclient/: CMakeLists.txt  tst_libirctest.cpp
src/tools/: unpack.sh
test_cert/: README  cert.csr  cert.pem  key.pem  privkey.pem
tools/docker/: Dockerfile  build.sh  grumpy.ini
travis/: before_install.sh  before_script.sh  install.sh  script.sh
windows/: grumpy.nsi  pack.ps1  release.ps1
windows64/: grumpy.nsi  pack.ps1  veyor.ps1
