PROJECT (grumpycore)
SET(CMAKE_AUTOMOC ON)
SET(QT_USE_QTNETWORK TRUE)

option(QT6_BUILD "Build with Qt6" false)

if(QT6_BUILD)
  find_package(Qt6Core REQUIRED)
  find_package(Qt6Network REQUIRED)
  find_package(Qt6Qml REQUIRED)
  set(QT_INCLUDES ${Qt6Network_INCLUDE_DIRS} ${Qt6Qml_INCLUDE_DIRS})
  include_directories(${QT_INCLUDES})
elif(QT5_BUILD)
  find_package(Qt5Core REQUIRED)
  find_package(Qt5Network REQUIRED)
  find_package(Qt5Qml REQUIRED)
  set(QT_INCLUDES ${Qt5Network_INCLUDE_DIRS} ${Qt5Qml_INCLUDE_DIRS})
  include_directories(${QT_INCLUDES})
else()
  find_package(Qt4 REQUIRED)
endif()

file (GLOB src "*.cpp" "scripting/*.cpp")
file (GLOB headers "*.h" "scripting/*.h")
file (GLOB resources "*.qrc")

if(QT6_BUILD)
    QT6_WRAP_CPP(grumpycore_HEADERS_MOC ${grumpycore_HEADERS})
    QT6_ADD_RESOURCES(grumpycore_RESOURCES_RCC ${resources})
elif(QT5_BUILD)
    QT5_WRAP_CPP(grumpycore_HEADERS_MOC ${grumpycore_HEADERS})
    QT5_ADD_RESOURCES(grumpycore_RESOURCES_RCC ${resources})
else()
    QT4_WRAP_CPP(grumpycore_HEADERS_MOC ${grumpycore_HEADERS})
    QT4_ADD_RESOURCES(grumpycore_RESOURCES_RCC ${resources})
endif()

ADD_DEFINITIONS(${QT_DEFINITIONS})

if (SQLITE)
  set(src ${src} "../sqlite/sqlite3.c")
  ADD_DEFINITIONS(-DGRUMPY_SQLITE)
endif()

ADD_DEFINITIONS( -DLIBCORE_LIBRARY -DQT_USE_QSTRINGBUILDER )

ADD_LIBRARY(grumpycore SHARED ${src} ${grumpycore_RESOURCES_RCC} ${headers})
if (QT6_BUILD)
    TARGET_LINK_LIBRARIES(grumpycore Qt6::Core Qt6::Network Qt6::Qml)
elif (QT5_BUILD)
    TARGET_LINK_LIBRARIES(grumpycore Qt5::Core Qt5::Network Qt5::Qml)
endif()
TARGET_LINK_LIBRARIES(grumpycore gp ircclient ${QT_LIBRARIES})
if (NOT WIN32)
  INSTALL(TARGETS grumpycore LIBRARY DESTINATION lib)
endif()
