PROJECT(libircclient_ut)

#SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTXML TRUE)
SET(QT_USE_QTTEST TRUE)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_AUTOMOC ON)

option(QT6_BUILD "Build with Qt6" false)

if(QT6_BUILD)
  find_package(Qt6Core REQUIRED)
  find_package(Qt6Xml REQUIRED)
  find_package(Qt6Test REQUIRED)
  set(QT_INCLUDES ${Qt6Xml_INCLUDE_DIRS} ${Qt6Test_INCLUDE_DIRS})
  include_directories(${QT_INCLUDES})
elseif(QT5_BUILD)
  find_package(Qt5Core REQUIRED)
  find_package(Qt5Xml REQUIRED)
  find_package(Qt5Test REQUIRED)
  set(QT_INCLUDES ${Qt5Xml_INCLUDE_DIRS} ${Qt5Test_INCLUDE_DIRS})
  include_directories(${QT_INCLUDES})
else()
  find_package(Qt4 REQUIRED)
endif()

file (GLOB headers "*.h")
file (GLOB src "*.cpp")
file (GLOB resources "*.qrc")

if(QT6_BUILD)
    QT6_WRAP_CPP(libircclient_ut_HEADERS_MOC ${libircclient_ut_HEADERS})
    QT6_ADD_RESOURCES(libircclient_ut_RESOURCES_RCC ${resources})
elseif(QT5_BUILD)
    QT5_WRAP_CPP(libircclient_ut_HEADERS_MOC ${libircclient_ut_HEADERS})
    QT5_ADD_RESOURCES(libircclient_ut_RESOURCES_RCC ${resources})
else()
    QT4_WRAP_CPP(libircclient_ut_HEADERS_MOC ${libircclient_ut_HEADERS})
    QT4_ADD_RESOURCES(libircclient_ut_RESOURCES_RCC ${resources})
endif()

if (NOT QT5_BUILD)
  INCLUDE(${QT_USE_FILE})
endif()

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS( -DQT_USE_QSTRINGBUILDER )

ADD_EXECUTABLE(libircclient_ut ${src} ${libircclient_ut_HEADERS_MOC} ${libircclient_ut_RESOURCES_RCC} ${headers} ${libircclient_ut_FORMS_HEADERS})
if (QT6_BUILD)
    TARGET_LINK_LIBRARIES(libircclient_ut Qt6::Core Qt6::Test)
elseif (QT5_BUILD)
    TARGET_LINK_LIBRARIES(libircclient_ut Qt5::Core Qt5::Test)
endif()
TARGET_LINK_LIBRARIES(libircclient_ut ircclient ${QT_LIBRARIES})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
